Mudando nome da th para Data de Entrega

--- a/src/app/components/list-task/list-task-notcompleted/list-task-notcompleted.component.html
+++ b/src/app/components/list-task/list-task-notcompleted/list-task-notcompleted.component.html
@@ -3,7 +3,7 @@
   <thead>
     <th></th>
     <th>Nome da Tarefa</th>
-    <th>Dia da Entrega</th>
+    <th>Data de Entrega</th>
     <th></th>
     <th></th>
   </thead>
